Revision history for perl distribution Convos

6.29 Not Released
 - Fix trying to connect if wanted_state is "connected"
 - Fix "Facts" bot action to only reply if the fact ends with "?"
 - Add more connection states: connecting and disconnecting
 - Add server messages when connections state changes
 - Add "Retry" button to loading screen

6.28 2021-09-12T15:38:00+0200
 - Fix notifications styling when channel changes
 - Add styling for conversations with notifications
 - Will update unread/notifications on conversation load, instead of unload

6.27 2021-08-28T16:52:00+0200
 - Changed notifications are now per channel #612
   Contributor: Jess Robinson
 - Fix not converting %\d+ strings into "undefined" #616
 - Fix not showing conversation settings header on small screen

6.26 2021-07-20T07:09:00+0900
 - Fix clearing the global search
 - Fix "+#" and "+@" in search bar to also filter "60+" #607 #609
 - Fix security issue with toggling "raw" for messages

6.25 2021-07-18T10:14:00+0900
 - Add handler for irc:// links #311
 - Add support for raw messages #592
 - Add support for a single character within backticks #602
 - Add settings icon to Notifications page #606
 - Add confirmation before deleting a connection #610
 - Made "+" filter in search bar sticky and also filter "60+" #607 #609
 - Fix not showing double quotes in previews #608
 - Fix animation when focusing sidebar-header search field

6.24 2021-06-02T10:28:00+0900
 - Add chat input field sent messages/commands history #598
 - Fix rendering notifications with non-unicode characters #596
 - Fix /chat/ will render notifications
 - Fix width of sidebar-header input in Firefox 78.10.0 ESR
 - Changed extended formatting to be stripped frontend code #600

6.23 2021-05-29T11:55:00+0900
 - Add popover on nick click, closes #566, #591
 - Fix hiding menu when selecting an emoji
 - Fix allowing to create new connections for non-admin users

6.22 2021-05-28T10:25:00+0900
 - Add GNOME theme #594