@@ -1,6 +1,7 @@
 Revision history for perl distribution Convos
 
 6.29 Not Released
+ - Fix decoding/encoding password and username for connections #620
  - Fix trying to connect if wanted_state is "connected"
  - Fix "Facts" bot action to only reply if the fact ends with "?"
  - Add more connection states: connecting and disconnecting
